Update _config.yml n3

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "João Gabriel Martins Ribeiro"
   pronouns         : # example: "she/her"  
-  bio              : "I am a Brazilian climate researcher completing my PhD in Climate and Sustainability. My work focuses on understanding large-scale climate changes, extreme events, and potential impacts of climate interventions using climate model data. I am passionate about advancing scientific knowledge to support global climate assessments and sustainable decision-making."
+  bio              : "Brazilian climate researcher"
   location         : "Itajubá - Minas Gerais - Brazil"
   employer         : "Federal University of Itajubá"
   uri              : "https://linktr.ee/joao_gmr472"
