--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : https://x.com/JGMribeiroo
+  twitter          : JGMribeiroo
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
