Update _config.yml n5

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title                    : "João G M Ribeiro"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+name                     : &name "João Gabriel M Ribeiro"
+description              : &description "João academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://joaogmr472.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IMG_20250516_144717_440-EDIT.jpg"
   name             : "João Gabriel Martins Ribeiro"
   pronouns         : # example: "she/her"  
   bio              : "Brazilian climate researcher"
